Fixed off center numbers banner

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -20,6 +20,7 @@
 }
 
 .numbers {
+    text-align: center;
     margin: 0em 4em 0em 4em;
 }
 
